--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "three": "^0.180.0",
     "three-mesh-bvh": "^0.9.1",
     "xlsx": "^0.18.5",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
