--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@react-three/fiber": "^8.17.10",
     "@sendgrid/mail": "^8.1.6",
     "@types/three": "^0.180.0",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.6",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.33.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^6.0.0",
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
     "leva": "^0.10.0",
